methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:26: error: overriding method avance in class SimpleBuggle of type (x$1: Int)Unit;
 method avance needs `override' modifier
def avance(p: Int) {
    ^FlowerPot:26: error: overriding method avance in class AbstractBuggle of type (x$1: Int)Unit;
 method avance needs `override' modifier
def avance(p: Int) {
    ^FlowerPot:30: error: method growFlowers overrides nothing
override def growFlowers() {
             ^